# rustbotx

./: Cargo.toml  README.md  audio  config.json_example
src/: console.rs  console_ok.rs  irc_engine.rs  main.rs  read_user_input.rs  receive_messages.rs  send_messages.rs  standard_console.rs  standard_console_ok.rs  startup_config.rs
src/irc/: irc_actions.rs  irc_engine.rs  irc_parser.rs  mod.rs
src/tts_engine/: mod.rs  tts_engine.rs
