[package]
name = "rustbotx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
ctrlc = "3.3.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27.0"
colored = "1.0"
termion = "1.5"
term_size = "0.3.1"
anyhow = "1.0"
ratatui = { version = "0.22.0", features = ["all-widgets"]}