[package]
name = "rustbotx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3"
ctrlc = "3.3.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27.0"
colored = "2.0"
termion = "2.0"
term_size = "0.3.1"
anyhow = "1.0"
itertools = "0.11"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
tts_rust = "0.3.4"
